RESOLVED FIXED181193
REGRESSION (r225494): Mouse pointer reappears shortly after hiding when scrolling using arrow keys
https://bugs.webkit.org/show_bug.cgi?id=181193
Summary REGRESSION (r225494): Mouse pointer reappears shortly after hiding when scrol...
mitz
Reported 2017-12-30 11:47:19 PST
To reproduce this bug, make this window shorter than the webpage, place the mouse pointer somewhere on the page, and press the up or down arrow key to scroll. The mouse pointer hides, then the page scrolls, then shortly afterwards the mouse pointer shows again, which shouldn’t happen. This happens in TOT but not in Safari 11.0.2 (604.4.7.1.3).
Attachments
Removed code to explicitly unhide the cursor when canceling the autohide timer (1.26 KB, patch)
2017-12-30 13:56 PST, mitz
ap: review+
mitz
Comment 1 2017-12-30 13:37:34 PST
Caused by <https://trac.webkit.org/r225494>, the fix for bug 180247. It’s not clear (and the change log doesn’t explain) why cancelAutoHideCursorTimer was made to show the cursor.
mitz
Comment 2 2017-12-30 13:40:07 PST
mitz
Comment 3 2017-12-30 13:56:59 PST
Created attachment 330262 [details] Removed code to explicitly unhide the cursor when canceling the autohide timer
mitz
Comment 4 2017-12-30 20:39:04 PST
Thanks, Alexey! Committed <https://trac.webkit.org/r226313>.
Antoine Quint
Comment 5 2017-12-31 02:19:04 PST
Is https://bugs.webkit.org/show_bug.cgi?id=180247 still fixed after this patch?
mitz
Comment 6 2017-12-31 12:45:23 PST
(In reply to Antoine Quint from comment #5) > Is https://bugs.webkit.org/show_bug.cgi?id=180247 still fixed after this > patch? Before this patch, the mouse pointer would unhide when hitting Esc. After this patch, the mouse pointer remains hidden after hitting Esc, until the mouse is moved. This matches the behavior in QuickTime Player. So I’d say that bug 180247 remains fixed, because the pointer isn’t hidden permanently as it used to be.
Note You need to log in before you can comment on or make changes to this bug.