REGRESSION (r225494): Mouse pointer reappears shortly after hiding when scrolling using arrow keys https://bugs.webkit.org/show_bug.cgi?id=181193

Reviewed by Alexey Proskuryakov.

* page/EventHandler.cpp:
(WebCore::EventHandler::cancelAutoHideCursorTimer): Removed a call to unhide the cursor
  here.



Canonical link: https://commits.webkit.org/197037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226313 268f45cc-cd09-0410-ab3c-d52691b4dbfc